--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="Vendors/CSS/animate.css">
         <link rel="stylesheet" type="text/css" href="Resources/CSS/style.css">
         <link rel="stylesheet" type="text/css" href="Resources/CSS/Queries.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet">
         <title> OmniFood </title>
         
